# stm32-freertos-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flash.sh  rebuild.sh  run_coverage.sh  run_tests.sh  toolchain-gcc-arm-none-eabi.cmake
app/: CMakeLists.txt
app/include/: app_config.h  led_app.h  uart_app.h  uart_dma_app.h
app/src/: error_handler.c  led_app.c  main_app.c  uart_app.c  uart_dma_app.c
boards/nucleo_g070rb/: CMakeLists.txt  STM32G070.svd  board.c  board_config.h  board_error.c  board_pins_stm32g0.h  st_mcu_g0.cfg
boards/nucleo_g070rb/cube/: .mxproject  Makefile  nucleo_g070rb_freertos.ioc
boards/nucleo_g070rb/cube/Core/Inc/: main.h  stm32g0xx_it.h
boards/nucleo_g070rb/cube/Core/Src/: gpio.c  main.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  usart.c
drivers/led/: CMakeLists.txt  led_gpio.c  led_gpio.h
drivers/uart/: CMakeLists.txt  uart_dma_stm32.c  uart_dma_stm32.h  uart_stm32.c  uart_stm32.h
instances/: CMakeLists.txt  err.h  led_instances.c  led_instances.h  uart_instances.c  uart_instances.h
interfaces/: app_err.h  led_api.h  uart_api.h
tests/: CMakeLists.txt  test_main.cpp
